# panda-vault

./: .dockerignore  .gitignore  CLAUDE.md  LICENSE  README_CN.md  docker-compose.smb.yml  docker-compose.yml  readme.md  start.sh
backend/: Cargo.toml  Dockerfile  start.sh
backend/migrations/: 0001_init.sql  0002_vector.sql  0003_sync_and_folders.sql  0004_folder_filesystem.sql  0005_upload_sessions.sql  0006_frame_embeddings.sql  0007_storage_volumes.sql  0008_scan_sessions.sql  0009_asset_fingerprint.sql  0010_upload_session_shoot_at.sql  0011_client_logs.sql  0012_folder_total_bytes.sql  0013_folder_total_asset_count.sql  0014_asset_note.sql
backend/src/: ai.rs  api.rs  chunked_upload.rs  client_logs.rs  config.rs  db.rs  export.rs  folder.rs  jobs.rs  main.rs  media.rs  scan.rs  sync.rs  timestamp.rs  volume.rs  web.rs
deploy/: README.md  install.bat  start.bat.example
design/: .design-canvas.state.json  App Icon.html  HANDOFF.md  素材库 Redesign.html
design/src/: cream.jsx  shared.jsx
docs/: ferrum-clip-api-contract.md
ios-app/: project.yml
ios-app/PandaVault/: PandaVault.entitlements
ios-app/PandaVault.xcodeproj/: project.pbxproj
ios-app/PandaVault/App/: AppState.swift  ContentView.swift  PandaVaultApp.swift
ios-app/PandaVault/Models/: Asset.swift  ExportInfo.swift  Folder.swift  HealthResponse.swift  UploadSession.swift  VolumeInfo.swift
ios-app/PandaVault/Resources/: Info.plist
ios-app/PandaVaultShare/: Info.plist  ShareViewController.swift
ios-app/Shared/: ShareInbox.swift
scripts/: backup.sh  samba_setup.sh
(+23 files in other folders)
