[package]
name = "panda-vault-backend"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["multipart"] }
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
hex = "0.4"
mime_guess = "2.0"
mime = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros", "migrate"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util", "process", "signal", "time"] }
tokio-util = { version = "0.7", features = ["io"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "fs", "catch-panic"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde", "v4"] }
reqwest = { version = "0.12", features = ["json"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
mdns-sd = "0.11"
hostname = "0.4"

[profile.release]
lto = "thin"
codegen-units = 1

